--- a/settings.html
+++ b/settings.html
@@ -2,23 +2,18 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>الإعدادات</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h2>الإعدادات</h2>
-    <button onclick="goBack()">رجوع</button>
-  </header>
-
-  <main>
-    <ul>
-      <li><a href="edit-profile.html">تعديل الملف الشخصي</a></li>
-      <li><a href="javascript:void(0)" onclick="logout()">تسجيل الخروج</a></li>
-      <li><a href="https://www.instagram.com/5_x_s" target="_blank">إبلاغ عبر إنستغرام</a></li>
-      <li><a href="https://t.me/UUYFU" target="_blank">إبلاغ عبر تيليجرام</a></li>
-    </ul>
-  </main>
+  <h2>الإعدادات</h2>
+  <ul>
+    <li><a href="#" onclick="logout()">تسجيل الخروج</a></li>
+    <li><a href="profile.html">تعديل الملف الشخصي</a></li>
+    <li><a href="#" onclick="toggleMode()">الوضع الليلي / العادي</a></li>
+    <li><a href="https://www.instagram.com/5_x_s/" target="_blank">الإبلاغ عبر إنستقرام</a></li>
+    <li><a href="https://t.me/UUYFU" target="_blank">الإبلاغ عبر تليجرام</a></li>
+  </ul>
+  <a href="chat.html">رجوع</a>
 </body>
 </html>
