--- a/login.html
+++ b/login.html
@@ -2,19 +2,35 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>تسجيل الدخول | rengeM</title>
+  <title>تسجيل الدخول</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
+  <div class="form-container">
     <h2>تسجيل الدخول</h2>
     <input type="text" id="loginUsername" placeholder="اسم المستخدم">
     <input type="password" id="loginPassword" placeholder="كلمة المرور">
-    <button onclick="loginUser()">تسجيل الدخول</button>
+    <button onclick="login()">دخول</button>
+    <p id="loginMessage" class="message"></p>
     <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
-    <p id="loginError" class="error"></p>
   </div>
-  <script src="firebase.js"></script>
-  <script src="script.js"></script>
+
+  <script>
+    function login() {
+      const username = document.getElementById("loginUsername").value.trim();
+      const password = document.getElementById("loginPassword").value;
+      const message = document.getElementById("loginMessage");
+
+      const users = JSON.parse(localStorage.getItem("users") || "[]");
+      const user = users.find(u => u.username === username && u.password === password);
+
+      if (user) {
+        localStorage.setItem("loggedInUser", JSON.stringify(user));
+        window.location.href = "chat.html";
+      } else {
+        message.innerText = "بيانات الدخول غير صحيحة.";
+      }
+    }
+  </script>
 </body>
 </html>
