--- a/chat.html
+++ b/chat.html
@@ -4,19 +4,18 @@
   <meta charset="UTF-8">
   <title>الدردشة</title>
   <link rel="stylesheet" href="style.css">
-  <script src="firebase.js"></script>
 </head>
 <body>
-  <div class="form-container">
-    <h2>الدردشة مع الأصدقاء</h2>
-    <input type="text" id="searchUser" placeholder="ابحث عن صديق بإسم المستخدم">
-    <button onclick="searchFriend()">بحث</button>
-
-    <div id="friendsList"></div>
-
-    <button onclick="logout()">تسجيل الخروج</button>
-    <button onclick="goToSettings()">الإعدادات</button>
+  <div class="chat-header">
+    <h2>مرحبا بك، <span id="usernameDisplay"></span></h2>
+    <input type="text" id="searchUserInput" placeholder="ابحث عن مستخدم">
+    <button onclick="searchUser()">بحث</button>
   </div>
+
+  <div id="searchResults"></div>
+
+  <h3>أصدقاؤك:</h3>
+  <ul id="friendsList"></ul>
 
   <script src="script.js"></script>
 </body>
