--- a/private-chat.html
+++ b/private-chat.html
@@ -6,66 +6,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="header">
-    <button onclick="goBack()">رجوع</button>
-    <h2 id="chatTitle">محادثة مع </h2>
-  </div>
+  <h2>الدردشة مع: <span id="chatWith"></span></h2>
+  <div id="messages"></div>
 
-  <div id="chatBox" class="chat-box"></div>
-
-  <div class="send-message">
-    <input type="text" id="messageInput" placeholder="اكتب رسالة...">
-    <button onclick="sendMessage()">إرسال</button>
-  </div>
+  <input type="text" id="messageInput" placeholder="اكتب رسالتك">
+  <button onclick="sendMessage()">إرسال</button>
 
   <script>
-    const currentUser = JSON.parse(localStorage.getItem("loggedInUser"));
-    const friendUsername = localStorage.getItem("chatWith");
-
-    document.getElementById("chatTitle").innerText += friendUsername;
-
-    function getMessages() {
-      const messagesKey = `${currentUser.username}_${friendUsername}_messages`;
-      return JSON.parse(localStorage.getItem(messagesKey) || "[]");
-    }
-
-    function saveMessages(messages) {
-      const messagesKey = `${currentUser.username}_${friendUsername}_messages`;
-      localStorage.setItem(messagesKey, JSON.stringify(messages));
-    }
+    const currentUser = localStorage.getItem("username");
+    const chatWith = localStorage.getItem("chatWith");
+    document.getElementById("chatWith").textContent = chatWith;
 
     function sendMessage() {
-      const input = document.getElementById("messageInput");
-      const text = input.value.trim();
-      if (!text) return;
-
-      const messages = getMessages();
-      messages.push({ from: currentUser.username, text, time: new Date().toLocaleTimeString() });
-      saveMessages(messages);
-      input.value = "";
-      displayMessages();
+      const msg = document.getElementById("messageInput").value;
+      if (!msg) return;
+      const container = document.getElementById("messages");
+      const msgDiv = document.createElement("div");
+      msgDiv.textContent = `${currentUser}: ${msg}`;
+      container.appendChild(msgDiv);
+      document.getElementById("messageInput").value = "";
     }
-
-    function displayMessages() {
-      const box = document.getElementById("chatBox");
-      box.innerHTML = "";
-      const messages = getMessages();
-
-      messages.forEach(msg => {
-        const div = document.createElement("div");
-        div.className = msg.from === currentUser.username ? "message self" : "message other";
-        div.innerText = `${msg.from}: ${msg.text}`;
-        box.appendChild(div);
-      });
-
-      box.scrollTop = box.scrollHeight;
-    }
-
-    function goBack() {
-      window.location.href = "chat.html";
-    }
-
-    window.onload = displayMessages;
   </script>
 </body>
 </html>
