--- a/signup.html
+++ b/signup.html
@@ -6,37 +6,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="form-container">
-    <h2>إنشاء حساب جديد</h2>
-    <input type="text" id="signupUsername" placeholder="اسم المستخدم">
-    <input type="password" id="signupPassword" placeholder="كلمة المرور">
-    <button onclick="signup()">إنشاء</button>
-    <p id="signupMessage" class="message"></p>
-    <p>لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
-  </div>
+  <h2>إنشاء حساب جديد</h2>
+  <input type="text" id="newUsername" placeholder="اسم المستخدم">
+  <input type="password" id="newPassword" placeholder="كلمة المرور">
+  <button onclick="register()">تسجيل</button>
 
   <script>
-    function signup() {
-      const username = document.getElementById("signupUsername").value.trim();
-      const password = document.getElementById("signupPassword").value;
-      const message = document.getElementById("signupMessage");
+    function register() {
+      const username = document.getElementById("newUsername").value;
+      const password = document.getElementById("newPassword").value;
 
-      if (!username || !password) {
-        message.innerText = "الرجاء ملء جميع الحقول.";
-        return;
-      }
-
-      const users = JSON.parse(localStorage.getItem("users") || "[]");
-
-      if (users.find(u => u.username === username)) {
-        message.innerText = "اسم المستخدم مستخدم بالفعل.";
-        return;
-      }
-
-      const newUser = { username, password };
-      users.push(newUser);
-      localStorage.setItem("users", JSON.stringify(users));
-      message.innerText = "تم إنشاء الحساب بنجاح. يمكنك تسجيل الدخول الآن.";
+      fetch("/register", {
+        method: "POST",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({ username, password })
+      }).then(res => res.json()).then(data => {
+        if (data.success) {
+          localStorage.setItem("username", username);
+          window.location.href = "chat.html";
+        } else {
+          alert(data.message);
+        }
+      });
     }
   </script>
 </body>
