--- a/chat.html
+++ b/chat.html
@@ -2,21 +2,43 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>الدردشة</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
-<body>
-  <div class="chat-header">
-    <h2>مرحبا بك، <span id="usernameDisplay"></span></h2>
-    <input type="text" id="searchUserInput" placeholder="ابحث عن مستخدم">
-    <button onclick="searchUser()">بحث</button>
+<body dir="rtl">
+  <div class="navbar">
+    <h2>تطبيق المراسلة</h2>
+    <button onclick="logout()">تسجيل الخروج</button>
   </div>
 
-  <div id="searchResults"></div>
+  <div class="main-container">
+    <div class="sidebar">
+      <input type="text" id="searchInput" placeholder="ابحث عن صديق..." oninput="searchUsers()">
+      <ul id="friendsList"></ul>
+    </div>
 
-  <h3>أصدقاؤك:</h3>
-  <ul id="friendsList"></ul>
+    <div class="chat-container">
+      <div class="chat-header">
+        <h3 id="chatWith">اختر صديق للدردشة</h3>
+        <span id="statusText"></span>
+      </div>
+      <div id="chatBox" class="chat-box"></div>
+      <div class="chat-input">
+        <input type="text" id="messageInput" placeholder="اكتب رسالة...">
+        <button onclick="sendMessage()">إرسال</button>
+      </div>
+    </div>
+  </div>
 
-  <script src="script.js"></script>
+  <div class="settings">
+    <h4>الإعدادات</h4>
+    <ul>
+      <li><a href="profile.html">تعديل الملف الشخصي</a></li>
+      <li><a href="javascript:void(0)" onclick="window.open('https://www.instagram.com/5_x_s/', '_blank')">الإبلاغ عبر إنستغرام</a></li>
+      <li><a href="javascript:void(0)" onclick="window.open('https://t.me/UUYFU', '_blank')">الإبلاغ عبر تيليجرام</a></li>
+    </ul>
+  </div>
 </body>
 </html>
