--- a/profile.html
+++ b/profile.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>الملف الشخصي</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>الملف الشخصي</header>
-  <div class="container">
-    <img id="profileImage" src="default.png" alt="الصورة الشخصية" width="100">
-    <p><strong>اسم المستخدم:</strong> <span id="username"></span></p>
-    <p><strong>الاسم الظاهر:</strong> <span id="displayName"></span></p>
-    <p><strong>نبذة:</strong> <span id="bio"></span></p>
-    <p><strong>الحالة:</strong> <span id="status"></span></p>
-    <button onclick="window.location.href='edit-profile.html'">تعديل الملف</button>
+
+  <div class="navbar">
+    <button onclick="logout()">تسجيل الخروج</button>
+    الملف الشخصي
   </div>
 
-  <script>
-    const user = JSON.parse(localStorage.getItem("currentUser"));
-    if (!user) window.location.href = "login.html";
+  <div class="main-container">
+    <div class="chat-container" style="width: 100%; padding: 30px;">
+      <div class="profile-box">
+        <img id="profileImage" src="default-avatar.png" alt="الصورة الشخصية" style="width: 120px; border-radius: 50%;">
+        <h2 id="displayName">اسم العرض</h2>
+        <p id="username">@username</p>
+        <p id="bio">نبذة عنك</p>
+        <button onclick="editProfile()">تعديل الملف الشخصي</button>
+      </div>
+    </div>
+  </div>
 
-    document.getElementById("username").textContent = user.username;
-    document.getElementById("displayName").textContent = user.displayName;
-    document.getElementById("bio").textContent = user.bio;
-    document.getElementById("status").textContent = "نشط";
-    document.getElementById("profileImage").src = user.profileImage || "default.png";
+  <script src="firebase.js"></script>
+  <script>
+    const currentUser = localStorage.getItem("currentUser");
+    if (!currentUser) window.location.href = "login.html";
+
+    fetch("users.json")
+      .then(res => res.json())
+      .then(data => {
+        const user = data.find(u => u.username === currentUser);
+        if (user) {
+          document.getElementById("profileImage").src = user.image || "default-avatar.png";
+          document.getElementById("displayName").textContent = user.displayName || "مستخدم بدون اسم";
+          document.getElementById("username").textContent = "@" + user.username;
+          document.getElementById("bio").textContent = user.bio || "لا توجد نبذة.";
+        }
+      });
+
+    function editProfile() {
+      window.location.href = "edit-profile.html";
+    }
+
+    function logout() {
+      localStorage.removeItem("currentUser");
+      window.location.href = "login.html";
+    }
   </script>
+
 </body>
 </html>
